# i3mux

./: .gitignore  Cargo.toml  INSTALL.md  README.md  TESTING.md  example-i3-config  i3mux-window-identification-design.md
.github/workflows/: test.yml
docs/: tailscale-ssh-sigwinch.md
examples/: i3-config-example
scripts/: README.md  i3mux-rofi
src/: connection.rs  layout.rs  main.rs  remote-helper.sh  session.rs  types.rs  window.rs  wm.rs  wrapper.sh
tests/: README.md  cleanup.sh  integration.sh  integration_tests.rs
tests/color-scripts/: color-fill.sh
tests/common/: comparison_spec.rs  diff_image.rs  docker.rs  environment.rs  i3mux.rs  mod.rs  network.rs  screenshot.rs  tier.rs
tests/docker/: Dockerfile  Dockerfile.remote  Dockerfile.sway  Dockerfile.xephyr  docker-compose.yml  i3-test-config  start-sway.sh  start-xephyr.sh  sway-test-config
tests/docker/scripts/: launch_terminal  msg
tests/docker/ssh-keys/: id_rsa  id_rsa.pub
tests/golden/specs/: 3way-hsplit.toml  3way-vsplit.toml  4way-grid.toml  complex-nested.toml  hsplit-2-terminals.toml  hsplit-in-tabs.toml  nested-splits.toml  simple.toml  single-window.toml  stacked-in-hsplit.toml  tabs-in-vsplit.toml  vsplit-2-terminals.toml
tests/integration/: common.rs  detach_attach.rs  detach_attach_spec.rs  edge_cases.rs  infrastructure.rs  layout_basic.rs  layout_multiway.rs  layout_nested.rs  layout_tabbed.rs  main.rs  network.rs
tests/integration/golden/specs/: 3way-hsplit.toml  3way-vsplit.toml  4way-grid.toml  complex-nested.toml  hsplit-2-terminals.toml  hsplit-in-tabs.toml  (+21 more)
